add ring unit tests, minor checkstyle suggestions